queries/.kubernetes/docs/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbt-docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbt-docs
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: dbt-docs
    spec:
      containers:
        - name: dbt-docs-serve
          image: gcr.io/PROJECT_ID/IMAGE_DBT:TAG
          ports:
            - containerPort: 3000

      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dbt-docs
  name: dbt-docs
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: dbt-docs

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbt-docs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-dbt-docs"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - docs.mobilidade.rio
      secretName: p-dbt-docs-tls
  rules:
    - host: docs.mobilidade.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dbt-docs
                port:
                  number: 3000
