queries/.kubernetes/docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbt-docs-ingress
  namespace: dbt-docs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-dbt-docs"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - docs.mobilidade.rio
      secretName: p-dbt-docs-tls
  rules:
    - host: docs.mobilidade.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dbt-docs
                port:
                  number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: dbt-docs
  namespace: dbt-docs
spec:
  ports:
    - port: 443
      targetPort: 3000
  selector:
    app: dbt-docs
