queries/.kubernetes/docs/last-applied.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbt-docs-ingress
  namespace: dbt-docs
  uid: a931df1e-046d-4414-bbbb-055968e14d2f
  resourceVersion: '1133986553'
  generation: 8
  creationTimestamp: '2023-08-17T12:21:40Z'
  labels:
    k8slens-edit-resource-version: v1
  annotations:
    cert-manager.io/issuer: letsencrypt-dbt-docs
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/issuer":"letsencrypt-dbt-docs","kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/rewrite-target":"/","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"dbt-docs-ingress","namespace":"dbt-docs"},"spec":{"rules":[{"host":"docs.mobilidade.rio","http":{"paths":[{"backend":{"service":{"name":"dbt-docs","port":{"number":3000}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"ho [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  managedFields:
    - manager: node-fetch
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2024-11-13T14:35:41Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:k8slens-edit-resource-version: {}
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2024-11-21T20:13:12Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:cert-manager.io/issuer: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:kubernetes.io/ingress.class: {}
            f:nginx.ingress.kubernetes.io/rewrite-target: {}
            f:nginx.ingress.kubernetes.io/ssl-redirect: {}
        f:spec:
          f:rules: {}
          f:tls: {}
    - manager: nginx-ingress-controller
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2025-03-27T13:03:40Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      subresource: status
  selfLink: /apis/networking.k8s.io/v1/namespaces/dbt-docs/ingresses/dbt-docs-ingress
status:
  loadBalancer:
    ingress:
      - ip: 34.71.77.125
spec:
  tls:
    - hosts:
        - docs.mobilidade.rio
      secretName: p-dbt-docs-tls
  rules:
    - host: docs.mobilidade.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dbt-docs
                port:
                  number: 3000
